--- a/style.css
+++ b/style.css
@@ -53,12 +53,13 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-right-style:solid ;
+  border-right-color:#eeeeee ;
 }
 
 .titulo{
   background-color:white;
-  border-bottom-width: thin ;
-  border-bottom-style: dotted;
+  
   
   height: 80px;
 
@@ -67,11 +68,20 @@ body {
 .letreiro{
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   background-color: white;
-
+  border-width: medium;
+  border-style: solid;
+  border-color: #eeeeee;
+  height: 100px;
 }
 
+
+
+.foto-perfil{
+  
+
+}
 #perfil{
   height: 50px;
   width: 50px;
@@ -79,14 +89,16 @@ body {
   border-width: medium;
   border-style: solid;
   border-color: red;
-  margin-top: 15px;
-  margin-left: 10px;
+  margin-top: 25px;
+  margin-left: 20px;
+  background-color: red;
+  
  
   
   
 }
 #nome{
-  background-color: lawngreen;
+  background-color: white;
   height: 50px;
   width: 50px;
     
@@ -116,15 +128,19 @@ body {
 .bloco3{
   background-color: white;
   margin-left: 10px;
+  border-right-style: solid;
+  border-right-color:#eeeeee ;
 
 }
 
 .sub-titulo{
   background-color:white;
-  margin-left: 10px;
+  margin-left: 35px;
   margin-top: 10px;
   display: flex;
   justify-content: flex-start;
+  border-right-style:solid ;
+  border-right-color:#eeeeee ;
 }
 
 #sub-perfil{
@@ -182,30 +198,42 @@ body {
 
 .comentario{
   background-color:white;
-  height: 100px;
+  height: 340px;
+  
   margin-bottom: 80px;
   border-width: medium;
-  border-style: solid;
-  border-color: #eeeeee;
+  border-style: none;
+  border-color: #eeeeee;  
+  border-right-style: solid;
+  border-right-color:#eeeeee ;
+  
   
 }
 
 .icones{
-  height: 100px;
+  height: 130px;
   width: 100%;
+
   background-color:white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start; 
+  border-width: medium;
+  border-style: solid;
+  border-color: #eeeeee;
 }
+  
+
 
 .lista1{
   background-color: white;
   display: flex;
   justify-content: space-between;
   width: 30%;
-  margin-left: 5%;
+  margin-left: 15px;
+  margin-top: 15px;
 }
+ 
 .lista2{
   background-color:white;
 }
@@ -214,8 +242,10 @@ body {
 .formulario{
   background-color: white;
   width: 100%;
+  height: 80px;
+  margin-top: 00px;
   display: flex;
-  justify-content: center;
+  align-items: center;
   border-width: medium;
   border-style: solid;
   border-color:#eeeeee;
@@ -223,22 +253,32 @@ body {
 
 #adicionar_um_comentario{
   background-color:white;
-  margin-top: 20px;
-  height: 50px;
-  width: 100%;
+  margin-top: 00px;
+  height: 60px;
+  width: 80%;
   margin-left: 00px;
   border-width: thin;
-  border-style: solid;
+  border-style: none;
   border-color: #eeeeee;
     
 }
 
 #publicar{
   background-color:white;
-  width: 65px;
-  margin-top: 20px;
+  height: 80px;
+  width: 20%;
+  height: 100%;
+  margin-top: 00px;
   margin-right: 00px;
   border-width: medium;
-  border-style: solid;
+  border-style: none;
   border-color: #eeeeee;
+  font-size: 20px;
+  color:blue;
+}
+#publicar:hover{
+  background-color: red;
+  border:red;
+  width: 30%;
+  color: white;
 }
